REFACT: changed main -> div, included footer.html, recipe.html at home.html

--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -5,8 +5,11 @@
     {% include "recipes/partials/search.html" %}
 
     <main class="main-content-container">
-        <main class="main-content main-content-list container">
-        </main>
+        <div class="main-content main-content-list container">
+            {% include "recipes/partials/recipe.html" %}
+        </div>
     </main>
+
+    {% include "recipes/partials/footer.html" %}
 </body>
 </html>
