STYLE: changed title written style

--- a/recipes/templates/recipes/partials/head.html
+++ b/recipes/templates/recipes/partials/head.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" href="{% static 'recipes/css/styles.css' %}">
 
-    <title>Recipes {{ name }}</title>
+    <title>Recipes | {{ name }}</title>
 
 
 </head>
