--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -1,41 +1,42 @@
 <div class="recipe recipe-list-item">
     <div class="recipe-cover">
-        <img src="https://placehold.co/1200x920/269fe6/FFF/png" alt="Temp">
+        <img src="{{ recipe.cover.url }}" alt="Temp">
     </div>
     
     <div class="recipe-title-container">
-        <h2 class="recipe-title">Lorem ipsum dolor sit amet.</h2>
+        <h2 class="recipe-title">{{ recipe.title }}</h2>
     </div>
     
     <div class="recipe-author">
         <span class="recipe-author-item">
             <i class="fas fa-user"></i>
-            Jorginho Silva
+            {{ recipe.author.first_name }}
+            {{ recipe.author.last_name }}
         </span>
         <span class="recipe-author-item">
             <i class="fas fa-calendar-alt"></i>
-            16/10/2023 - às 22:31
+            {{ recipe.created_at|date:"d/m/Y" }} às {{ recipe.created_at|date:"H:i" }}
         </span>
         <span class="recipe-author-item">
-            <a href="/"><i class="fas fa-layer-group"></i> Teste</a>
+            <a href="/"><i class="fas fa-layer-group"></i> {{ recipe.category.name }}</a>
         </span>
     </div>
 
     <div class="recipe-content">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi mollitia cum voluptatibus tempora, adipisci, recusandae eius perspiciatis dolorem consectetur, ipsa suscipit dignissimos voluptate! Deleniti neque unde earum reprehenderit magni, harum veritatis eum fuga ex id.</p>
+        <p>{{ recipe.description }}</p>
     </div>
 
     <div class="recipe-meta-container">
         <div class="recipe-meta recipe-preparation">
-            <h3 class="recipe-meta-title"><i class="fas fa-stopwatch"></i> Preparo</h3>
+            <h3 class="recipe-meta-title"><i class="fas fa-stopwatch"></i> {{ recipe.preparation_time_unit }}</h3>
             <div class="recipe-meta-text">
-                0 Minutos
+                {{ recipe.preparation_time }}
             </div>
         </div>
         <div class="recipe-meta recipe-servings">
-            <h3 class="recipe-meta-title"><i class="fas fa-pizza-slice"></i> Porções</h3>
+            <h3 class="recipe-meta-title"><i class="fas fa-pizza-slice"></i> {{ recipe.servings_unit }}</h3>
             <div class="recipe-meta-text">
-                0 Porções
+                {{ recipe.servings }}
             </div>
         </div>
     </div>
