--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -27,9 +27,15 @@
             <i class="fas fa-calendar-alt"></i>
             {{ recipe.created_at|date:"d/m/Y" }} às {{ recipe.created_at|date:"H:i" }}
         </span>
-        <span class="recipe-author-item">
-            <a href="{% url "recipes:category" recipe.category.id %}"><i class="fas fa-layer-group"></i> {{ recipe.category.name }}</a>
-        </span>
+        {% if recipe.category is not None %}
+            <span class="recipe-author-item">
+                <a href="{% url "recipes:category" recipe.category.id %}">
+                    <i class="fas fa-layer-group"></i> {{ recipe.category.name }}
+                </a>
+            </span>
+        {% else %}
+            <span class="recipe-author-item">Sem categoria</span>
+        {% endif %}
     </div>
 
     <div class="recipe-content">
