--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -15,12 +15,18 @@
     
     <div class="recipe-author">
         <span class="recipe-author-item">
-            <i class="fas fa-user"></i>
-            {% if recipe.author.first_name %}
-                {{ recipe.author.first_name }}
-                {{ recipe.author.last_name }}
-            {% else %}
-                {{ recipe.author.username }}
+            <i class="recipe-author-item fas fa-user"></i>
+            {% if recipe.author is not None %}
+                {% if recipe.author.first_name %}
+                    {{ recipe.author.first_name }}
+                    {{ recipe.author.last_name }}
+                {% else %}
+                    {{ recipe.author.username }}
+                {% endif %}
+                {% else %}
+                <span class="recipe-author-item">
+                    Desconhecido
+                </span>
             {% endif %}
         </span>
         <span class="recipe-author-item">
